<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ============================================================ -->
    <!-- Coordinate del progetto                                       -->
    <!-- ============================================================ -->
    <groupId>it.ispw</groupId>
    <artifactId>tutora</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>TUTORA</name>
    <description>Piattaforma di tutoraggio – Progetto ISPW</description>

    <!-- ============================================================ -->
    <!-- Proprietà globali                                             -->
    <!-- ============================================================ -->
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Versioni dipendenze -->
        <javafx.version>21.0.2</javafx.version>
        <mysql.version>8.3.0</mysql.version>
        <jbcrypt.version>0.4</jbcrypt.version>
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.11.0</mockito.version>

        <!-- Versioni plugin -->
        <plugin.compiler.version>3.13.0</plugin.compiler.version>
        <plugin.javafx.version>0.0.8</plugin.javafx.version>
        <plugin.surefire.version>3.2.5</plugin.surefire.version>
        <plugin.jar.version>3.3.0</plugin.jar.version>
        <plugin.sonar.version>3.11.0.3922</plugin.sonar.version>

        <!-- ======================================================== -->
        <!-- SonarQube Cloud                                           -->
        <!-- ======================================================== -->
        <sonar.organization>vittorio-iozzia</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>vittorio-iozzia_TUTORA_ISPW</sonar.projectKey>
        <!-- sonar.token va passato da riga di comando, MAI committato -->
        <!-- mvn sonar:sonar -Dsonar.token=IL_TUO_TOKEN                -->
    </properties>

    <!-- ============================================================ -->
    <!-- Dipendenze                                                     -->
    <!-- ============================================================ -->
    <dependencies>

        <!-- JavaFX – GUI -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- MySQL JDBC Connector -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <!-- BCrypt – hashing password (mai in chiaro) -->
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>${jbcrypt.version}</version>
        </dependency>

        <!-- ======================================================== -->
        <!-- Dipendenze di test                                        -->
        <!-- ======================================================== -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <!-- ============================================================ -->
    <!-- Build e plugin                                                -->
    <!-- ============================================================ -->
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>

        <plugins>

            <!-- Compilatore Java 17 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${plugin.compiler.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Plugin JavaFX – mvn javafx:run -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${plugin.javafx.version}</version>
                <configuration>
                    <mainClass>it.ispw.tutora.TutoraApp</mainClass>
                </configuration>
            </plugin>

            <!-- Surefire – esegue test JUnit 5 con mvn test -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${plugin.surefire.version}</version>
            </plugin>

            <!-- JAR con manifest -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${plugin.jar.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>it.ispw.tutora.TutoraApp</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- SonarQube – mvn sonar:sonar -Dsonar.token=TOKEN -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${plugin.sonar.version}</version>
            </plugin>

        </plugins>
    </build>

</project>